# geek

./: .env.docker  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  FREE_DEPLOYMENT_SUMMARY.md  FRONTEND_COMPLETE.md  MARKDOWN_EXPORT_GUIDE.md  OBSIDIAN_EXPORT_GUIDE.md  OBSIDIAN_FEATURES_SUMMARY.md  README.md  README_DATABASE_API.md  SIMPLE_EXPORT_GUIDE.md  all_articles_complete.md  anti_detection_strategy.py  debug_analytics.js  demo_export.py  demo_frontend.py  deploy.sh  docker-compose.yml  docker-quick-start.md  docker-services.sh  export_obsidian.py  export_simple_list.py  export_to_markdown.py  install_dependencies.sh  main.py  pyproject.toml  quick_deploy.py  railway.toml  requirements-deploy.txt  requirements.txt  setup_local_services.md  start_services.sh  web_api.py
analytics/: __init__.py  content_evaluator.py  tag_extractor.py  trend_analyzer.py
crawler/: article_discovery.py  browser.py  history_crawler.py  series_crawler.py  wechat.py
deploy_package/: web_api.py
deploy_package/frontend/: README.md  index.html  vercel.json
deploy_package/storage/: database.py
frontend/: .gitignore  DEVELOPMENT.md  README.md  index.html  pyproject.toml  server.py
frontend/css/: main.css
frontend/js/: api.js  main.js
frontend/scripts/: dev.sh  format.sh  install.sh  test.sh
frontend/tests/: test_server.py
obsidian_vault/: 📚 Web3极客日报索引.md
parser/: article.py
proxy/: manager.py
scripts/: export_markdown.sh  export_obsidian.sh  export_simple.sh
storage/: models.py
test_vault/: 📚 Web3极客日报索引.md
utils/: config.py
(+17 files in other folders)
